# Auxin_Automata

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AUXIN_AUTOMATA_DEEP_DIVE.md  CLAUDE.md  CODEOWNERS  LICENSE  MAINNET_DEPLOYMENT.md  Makefile  PRE_SHIP_CHECKLIST.md  README.md  auxin_automata_overview.tex  auxin_automata_phases.tex  auxin_automata_prompts.tex  docker-compose.demo.yml
.devcontainer/: devcontainer.json  install-tools.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
dashboard/: .cursorrules  .env.example  .env.production.example  Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: ComplianceTable.tsx  Header.tsx  InvoiceDownloader.tsx  PaymentTicker.tsx  RiskGauge.tsx  SentryProvider.tsx  SystemBloomCard.tsx  TelemetryCard.tsx  TreasuryPanel.tsx  TwinViewport.tsx  VideoReplay.tsx
dashboard/lib/: anchor.ts  cluster.ts  mockData.ts  solana.ts  store.ts  useBridgeSocket.ts  useProgramEvents.ts
dashboard/lib/idl/: agentic_hardware_bridge.json
docs/: investor_update_april_2026.md  privacy-cloak.md  privacy-magicblock.md  privacy-overview.md  privacy-umbra.md
docs/submissions/: cloak-submission.md  magicblock-submission.md  umbra-submission.md
edge/: .env.example  README.md  package.xml  setup.cfg  setup.py
edge/auxin_edge/: __init__.py  ros2_source.py  safety_watchdog_node.py  telemetry_bridge_node.py
edge/launch/: auxin_edge.launch.py
edge/systemd/: auxin-bridge.service  auxin-watchdog.service
grafana/: auxin_dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
programs/: .env.example  Anchor.toml  Cargo.toml  DESIGN.md  README.md  SECURITY.md  deployed_devnet.json  deployed_mainnet.json  package.json  pnpm-lock.yaml
programs/programs/agentic_hardware_bridge/: Cargo.toml
programs/programs/agentic_hardware_bridge/src/: errors.rs  events.rs  lib.rs  state.rs
programs/programs/agentic_hardware_bridge/src/instructions/: initialize_agent.rs  log_compliance_event.rs  mod.rs  stream_compute_payment.rs  update_provider_whitelist.rs
programs/tests/: agentic_hardware_bridge.ts
prometheus/: prometheus.yml
scripts/: deploy_devnet.sh  deploy_mainnet.sh  generate_demo_report.py  healthcheck.sh  initialise_mainnet.py  run_recorded_demo.py  setup_cloak_provider.py  setup_devnet.py  setup_umbra_viewing_key.py  smoke_test_devnet.ts
sdk/: .env.example  .env.mainnet.example  Dockerfile  README.md  pyproject.toml
sdk/fixtures/images/: labels.json
sdk/scripts/: generate_invoice.py  run_bridge.py
sdk/src/auxin_sdk/: __init__.py  bridge.py  config.py  fixtures.py  hashing.py  logging.py  oracle.py  schema.py  wallet.py
sdk/src/auxin_sdk/invoicing/: __init__.py  generator.py  types.py
sdk/src/auxin_sdk/invoicing/templates/: invoice.html  invoice.tex.j2
sdk/src/auxin_sdk/privacy/: __init__.py  base.py  cloak.py  direct.py  magicblock.py  umbra.py
sdk/src/auxin_sdk/privacy/cloak_bridge/: deposit.mjs  keygen.mjs  package.json
sdk/src/auxin_sdk/program/: __init__.py  client.py
sdk/src/auxin_sdk/prompts/: replay_oracle_v1.txt  safety_oracle_v1.txt  scene_description_v1.txt  treasury_agent_v1.txt
sdk/src/auxin_sdk/risk/: __init__.py  scorer.py  types.py
sdk/src/auxin_sdk/sources/: __init__.py  base.py  mock.py  recorded.py
sdk/src/auxin_sdk/treasury/: __init__.py  agent.py  types.py
sdk/tests/: conftest.py  eval_oracle.py  test_bridge_coverage.py  test_bridge_e2e.py  test_cloak_provider.py  test_config.py  test_hashing.py  test_invoice_generator.py  test_logging.py  test_magicblock_provider.py  test_mock_source.py  test_oracle.py  test_privacy.py  test_recorded_source.py  test_risk_scorer.py  test_schema.py  test_treasury_agent.py  test_umbra_provider.py  test_wallet.py
services/umbra-bridge/: Dockerfile  package.json  server.mjs
twin/: .env.example  Dockerfile  README.md  pyproject.toml
twin/src/twin/: __init__.py  __main__.py  render.py  scene.py  source.py  trajectory.py
twin/tests/: test_twin_source.py
