[project]
name = "auxin-sdk"
version = "0.1.0"
description = "Agentic infrastructure SDK — hardware wallets, telemetry, Gemini oracle, Solana bridge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Edwin Redhead" },
    { name = "Tara Kasayapanand" },
]
dependencies = [
    "solders>=0.21.0",
    "solana>=0.35.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "google-generativeai>=0.7.0",
    "tenacity>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auxin_sdk"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -m 'not network' --cov=src --cov-report=term-missing --cov-fail-under=80"
markers = [
    "network: marks tests that require Devnet access (excluded by default; use -m network to run)",
]
