[project]
name = "auxin-sdk"
version = "0.1.0"
description = "Agentic infrastructure SDK — hardware wallets, telemetry, Gemini oracle, Solana bridge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Edwin Redhead" },
    { name = "Tara Kasayapanand" },
]
dependencies = [
    "solders>=0.21.0",
    "solana>=0.35.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "google-generativeai>=0.7.0",
    "tenacity>=8.0.0",
    "aiohttp>=3.9.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk[aiohttp]>=2.0.0",
    "anthropic>=0.25.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xprocess>=1.0.2",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auxin_sdk"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -m 'not network' --cov=src --cov-report=term-missing --cov-fail-under=55"
markers = [
    "network: marks tests that require Devnet access (excluded by default; use -m network to run)",
]

[tool.coverage.run]
# program/client.py calls live Solana RPC — excluded from unit-test coverage.
# Network-path tests are under the `network` marker and run separately.
# Bridge workers and privacy providers require integration tests (full Solana stack).
omit = [
    "*/auxin_sdk/program/client.py",
    "*/auxin_sdk/privacy/cloak.py",
    "*/auxin_sdk/privacy/direct.py",
    "*/auxin_sdk/privacy/magicblock.py",
    "*/auxin_sdk/privacy/umbra.py",
]
